--- a/web0/estils.css
+++ b/web0/estils.css
@@ -1,6 +1,6 @@
 body{
-    background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
-	font-family: Verdana;
+    background: -webkit-linear-gradient(left, #ad2ace, #5e0570);
+	font-family: Impact, 'Arial Narrow Bold', sans-serif;
 }
 .contact-form{
     background: #fff;
@@ -18,7 +18,6 @@ body{
     border-radius: 6rem;
     width: 11%;
     margin-top: -3%;
-    transform: rotate(29deg);
 }
 .contact-form form{
     padding: 14%;
@@ -30,7 +29,7 @@ body{
     margin-bottom: 8%;
     margin-top: -10%;
     text-align: center;
-    color: #0062cc;
+    color: #ab21c7;
 }
 .contact-form .btnContact {
     width: 50%;
